--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,17 @@
   <body>
     <!-- ❗️❗️❗️ include (подключение) html / scss ❗️❗️❗️ -->
 
-    <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/footer.html"></include>
+    <include src="./partials/module-1.html"></include>
+    <include src="./partials/module-2.html"></include>
+    <include src="./partials/module-3.html"></include>
+    <include src="./partials/module-4.html"></include>
+    <include src="./partials/module-5.html"></include>
+    <include src="./partials/module-6.html"></include>
+    <include src="./partials/module-7.html"></include>
+    <include src="./partials/module-8.html"></include>
+    <include src="./partials/module-9.html"></include>
+    <include src="./partials/module-10.html"></include>
+    <include src="./partials/module-11.html"></include>
 
     <link rel="stylesheet" href="./sass/utils/variables.scss" />
     <!-- подключение скриптов -->
