--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,17 @@
   <body>
     <!-- ❗️❗️❗️ include (подключение) html / scss ❗️❗️❗️ -->
 
-    <include src="./partials/module-1.html"></include>
-    <include src="./partials/module-2.html"></include>
-    <include src="./partials/module-3.html"></include>
-    <include src="./partials/module-4.html"></include>
-    <include src="./partials/module-5.html"></include>
-    <include src="./partials/module-6.html"></include>
-    <include src="./partials/module-7.html"></include>
-    <include src="./partials/module-8.html"></include>
-    <include src="./partials/module-9.html"></include>
-    <include src="./partials/module-10.html"></include>
-    <include src="./partials/module-11.html"></include>
+    <include src="./partials/module-one.html"></include>
+    <include src="./partials/module-two.html"></include>
+    <include src="./partials/module-three.html"></include>
+    <include src="./partials/module-four.html"></include>
+    <include src="./partials/module-five.html"></include>
+    <include src="./partials/module-six.html"></include>
+    <include src="./partials/module-seven.html"></include>
+    <include src="./partials/module-eight.html"></include>
+    <include src="./partials/module-nine.html"></include>
+    <include src="./partials/module-ten.html"></include>
+    <include src="./partials/module-eleven.html"></include>
 
     <link rel="stylesheet" href="./sass/utils/variables.scss" />
     <!-- подключение скриптов -->
